--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Winky+Sans&display=swap');
+
+* {
+  font-family: 'Winky Sans', sans-serif;
+}
+
 body {
-  font-family: sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
